# benzene-vanilla-cmake

./: CMakeLists.txt  requirements.txt  setup.py
self-play/: mohex-selfplay.htp  selfplay.py
src/mohex/: CMakeLists.txt
templates/interior/positive/: crescent.sgf  wheel.sgf
templates/positive/: bridge.sgf  span.sgf  trapezoid.sgf
tools/book/: book-solve.py  program.py  split.py
tournament/: 7-1.sh  MoHexScript.py  common.sh  gameplayer.py  mohex-simple-ncc.htp  mohex-simple-swap.htp  mohex-simple.htp  program.py  resultsfile.py  run-mohex-vs-mohex-ncc.sh  run-mohex-vs-mohex.sh  summary.py  tournament.py  twogtp.py
tournament/jobs/6x6-mohex-mohex-simple-a-vs-mohex-mohex-simple-b/: 0000.sgf  0001.sgf  0002.sgf  0003.sgf  0005.sgf  0006.sgf  0007.sgf  0010.sgf  0012.sgf  0013.sgf  0014.sgf  0015.sgf  0016.sgf  0017.sgf  0018.sgf  0019.sgf  0020.sgf  0021.sgf  0022.sgf  0023.sgf  0024.sgf  0025.sgf  0026.sgf  0027.sgf  0028.sgf  0029.sgf  0030.sgf  0031.sgf  0034.sgf  0035.sgf  0036.sgf  0038.sgf  0039.sgf  (+11046 more)
tournament/openings/: 6x6-all-2ply  6x6-all-3ply  6x6-all-4ply  6x6-all-random-4ply  7x7-all-2ply  7x7-all-3ply  openings_generator.py
tournament/slurm/: 7x7-settings.htp  run-7-1.sh
tsetlin/: demos.py  exploration.py  hextm.py  hextm_cuda.py  selfplay_results_to_winner_pred_dataset.py  test.py  tests.py  tsetlinmachinedemos.py  utils.py
tsetlin/exploration/: exploration.py
tsetlin/models/: 6x6-baseline_exact_model.pkl
tsetlin/testing/: tests.py
tsetlin/tournaments/: tournament_results_to_winner_pred_dataset.py
tsetlin/training/: hextm.py
(+13247 files in other folders)
